--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,11 @@ version = "0.1.0"
 
 [deps]
 Comodo = "59095408-2761-4f7a-bdc2-044e78630271"
+Geogram = "01f21b16-7867-403b-a62b-5acce171fc87"
 
 [compat]
 Comodo = "0.1.0"
+Geogram = "0.1.0"
+
+[sources]
+Geogram = {url = "https://github.com/COMODO-research/Geogram.jl.git"}
