--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,14 @@ version = "0.1.0"
 
 [deps]
 Comodo = "59095408-2761-4f7a-bdc2-044e78630271"
+FEBio = "c57eab10-e7d7-41f3-9039-a27761009b26"
 Geogram = "01f21b16-7867-403b-a62b-5acce171fc87"
-
-[compat]
-Comodo = "0.1.0"
-Geogram = "0.1.0"
 
 [sources]
 Geogram = {url = "https://github.com/COMODO-research/Geogram.jl.git"}
+FEBio = {url = "https://github.com/febiosoftware/FEBio.jl.git"}
+
+[compat]
+Comodo = "0.1.0"
+FEBio = "0.1.0"
+Geogram = "0.1.0"
