--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,18 @@ version = "0.1.0"
 
 [deps]
 Comodo = "59095408-2761-4f7a-bdc2-044e78630271"
+FEBio = "c57eab10-e7d7-41f3-9039-a27761009b26"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Geogram = "01f21b16-7867-403b-a62b-5acce171fc87"
-
-[compat]
-Comodo = "0.1.0"
-Geogram = "0.1.0"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [sources]
+FEBio = {url = "https://github.com/febiosoftware/FEBio.jl.git"}
 Geogram = {url = "https://github.com/COMODO-research/Geogram.jl.git"}
+
+[compat]
+Comodo = "1.0.1"
+FEBio = "0.1.0"
+FileIO = "1.17.0"
+Geogram = "0.1.0"
+Printf = "1.11.0"
